# emscripten_synth

./: CMakeLists.txt  build.cjs  index.html  package-lock.json  package.json  vite.config.js
include/: AudioProcessor.h
src/: WaveTableOsc.cpp  WaveTableOsc.h  WaveUtils.cpp  WaveUtils.h  audio_processor.cpp  audio_processor.js  main.cpp  main.js  pre.js  sine_processor.cpp  sine_processor.js  wasm_to_js_array.cjs  wave_processor.cpp  wave_processor.js  wave_processor_worklet.js
